--- a/vijay.html
+++ b/vijay.html
@@ -5,4 +5,5 @@
 <hr>
 <p>
     he is a very good actor. has a huge fan base. about to enter politics.
+    attracted to kids basicallly. recently, involved in many social service activities.
 </p>
